--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=ljc-ticket-saas
+# ?????
+spring.datasource.url=jdbc:mysql://localhost:3306/ljc_ticket_saas?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=020222
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ????? SQL ????????
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+spring.sql.init.mode=never
+  //never??always
