feat: 配置自动化数据导入并添加初始测试数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 
-spring.sql.init.mode=never
-  //never??always
+# 1. ?????? always ???????
+spring.sql.init.mode=always
+
+# 2. ???????????????
+spring.sql.init.data-locations=classpath:data.sql
