--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ljc-ticket-saas
 # 数据库连接（建议用环境变量注入，避免把密码提交到仓库）
 spring.datasource.url=jdbc:mysql://localhost:3306/ljc_ticket_saas?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-//spring.datasource.password=password
+#spring.datasource.password=password
 spring.datasource.password=020222
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
